# VineOS

app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/display/: framebuffer_bridge.cpp
app/src/main/cpp/qemu_bridge/: qemu_launcher.cpp
app/src/main/cpp/utils/: vine_utils.cpp  vine_utils.h
app/src/main/java/com/hexadecinull/vineos/data/models/: AbiCompat.kt
app/src/main/java/com/hexadecinull/vineos/domain/: VineVMManager.kt
app/src/main/java/com/hexadecinull/vineos/native/: VineRuntime.kt
app/src/main/java/com/hexadecinull/vineos/ui/components/: InstanceCard.kt
app/src/main/java/com/hexadecinull/vineos/ui/screens/: HomeScreen.kt  ROMsScreen.kt  SettingsScreen.kt
